# focused-review

./: .gitignore  CLAUDE.md  README.md  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: review-assessor.agent.md  review-consolidator.agent.md  review-reporter.agent.md  review-runner.agent.md
docs/spec/: benchmark-rerun.md  benchmark-round-4.md  benchmarks.md  canvas-review-report-investigation.md  canvas-review-report.md  concern-reliability.md  configurable-rules-dir.md  focused-review.md  mark-fixed-findings.md  marketplace-publishing.md  post-comments.md  unified-finding-numbering.md  unified-review.md  verdict-model-redesign.md
review/concerns/: architecture.md  bugs.md  security.md
review/rules/: code-duplication.md  general-review.md  no-python-llm-parsing.md  windows-path-compatibility.md
skills/focused-review/: POST-COMMENTS.md  REFRESH.md  SKILL.md
skills/focused-review/defaults/: bug-spotter.md  concern-framework.md  general-review.md
skills/focused-review/defaults/concerns/: architecture.md  bugs.md  general.md  security.md
skills/focused-review/scripts/: focused-review.py
skills/focused-review/scripts/tests/: __init__.py  test_concerns.py  test_continuation.py  test_discover.py  test_plugin_manifests.py  test_post_comments.py  test_post_comments_ado.py  test_pr_utils.py  test_prepare_review.py  test_records_schema.py  test_render_review.py  test_review_canvas_template.py  test_rules_dir_resolution.py  test_run_concerns.py  (+4 more)
skills/focused-review/templates/: review-canvas.fixture.html  review-canvas.html
